# webassembly-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
public/: main.js
src/: lib.rs  main.rs
