[package]
name = "image-effects"
version = "0.1.0"
edition = "2021"
authors = ["Robiel Tesfazghi"] 
description = "A simple webassembly project"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"
features = ["console"]
